# game_PPGSO

./: CMakeLists.txt  README.docx  README.md
shader/: color_frag.glsl  color_vert.glsl  texture_frag.glsl
src/: animal.cpp  animal.h  animator.cpp  animator.h  camera.cpp  camera.h  cloud.cpp  cloud.h  main.cpp  object.cpp  object.h  player.cpp  player.h  popup.cpp  popup.h  rock.cpp  rock.h  scene.cpp  scene.h  simpleObject.cpp  simpleObject.h
